# zkapi-EF-collab

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/zkapi-auth/: Cargo.toml
crates/zkapi-auth/src/: blind_schnorr.rs  blind_signature.rs  compat.rs  config.rs  indexer.rs  lib.rs  main.rs  routes.rs  scalar.rs  service.rs  state_anchor.rs
crates/zkapi-cli/: Cargo.toml
crates/zkapi-cli/src/: main.rs
crates/zkapi-clientd/: Cargo.toml
crates/zkapi-clientd/src/: compat.rs  config.rs  error.rs  lib.rs  main.rs  routes.rs  service.rs
crates/zkapi-indexerd/: Cargo.toml
crates/zkapi-indexerd/src/: http.rs  lib.rs  main.rs  poller.rs  service.rs  tree_mirror.rs
crates/zkapi-integration-tests/: Cargo.toml
crates/zkapi-integration-tests/src/: fixtures.rs  lib.rs
crates/zkapi-integration-tests/tests/: http_wallet.rs  protocol_roundtrip.rs
crates/zkapi-serverd/: Cargo.toml
crates/zkapi-serverd/src/: config.rs  error.rs  lib.rs  nullifier_store.rs  processor.rs  provider.rs  routes.rs  signer.rs  watcher.rs
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docker/tee/: attestation-hook.sh
docs/: api-spec.md  architecture.md  auth-schemes.md  deliverables-status.md  deployment.md  design-note.md  openapi.yaml  roadmap.md
docs-site/: README.md  package.json  pnpm-lock.yaml
docs-site/content/docs/: architecture.mdx  cryptography.mdx  getting-started.mdx  index.mdx  meta.json  protocol.mdx
docs-site/content/docs/api-reference/: clientd.mdx  index.mdx  indexer.mdx  meta.json  serverd.mdx  vault.mdx
docs-site/src/app/: layout.tsx
docs-site/src/app/(home)/: page.tsx
docs-site/src/lib/: layout.shared.tsx  shared.ts
funding-page/: app.js  index.html  styles.css
scripts/: balances.sh  e2e-demo.sh  stress-test.sh
