[workspace]
resolver = "2"
members = [
    "crates/zkapi-cli",
    "crates/zkapi-clientd",
    "crates/zkapi-serverd",
    "crates/zkapi-indexerd",
    "crates/zkapi-integration-tests",
]
default-members = ["crates/zkapi-cli", "crates/zkapi-clientd"]
exclude = ["protocol", "protocol/rust", "funding-page"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
starknet-crypto = "0.8"
starknet-curve = "0.6"
starknet-types-core = "0.2"
tempfile = "3.13"
thiserror = "2.0"
tokio = { version = "1.41", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
