[package]
name = "zkapi-auth"
description = "Swappable credential-scheme abstraction for zkAPI: state-anchor (reference) and blind-signature auth methods"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
zkapi-types = { path = "../../protocol/rust/crates/zkapi-types" }
zkapi-core = { path = "../../protocol/rust/crates/zkapi-core" }
zkapi-crypto = { path = "../../protocol/rust/crates/zkapi-crypto" }
num-bigint = "0.4"
rand = { workspace = true }
serde = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
starknet-types-core = { workspace = true }
thiserror = { workspace = true }
