[package]
name = "zkapi-cli"
description = "Command-line interface for the zkAPI app-layer workspace"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "zkapi"
path = "src/main.rs"

[dependencies]
zkapi-clientd = { path = "../zkapi-clientd" }
zkapi-serverd = { path = "../zkapi-serverd" }
zkapi-indexerd = { path = "../zkapi-indexerd" }
zkapi-client = { path = "../../protocol/rust/crates/zkapi-client" }
zkapi-core = { path = "../../protocol/rust/crates/zkapi-core" }
zkapi-types = { path = "../../protocol/rust/crates/zkapi-types" }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
