[package]
name = "zkapi-clientd"
description = "Local client daemon and wallet bridge for zkAPI applications"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "zkapi-clientd"
path = "src/main.rs"

[dependencies]
zkapi-client = { path = "../../protocol/rust/crates/zkapi-client" }
zkapi-core = { path = "../../protocol/rust/crates/zkapi-core" }
zkapi-types = { path = "../../protocol/rust/crates/zkapi-types" }
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
fs2 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
zkapi-core = { path = "../../protocol/rust/crates/zkapi-core" }
zkapi-serverd = { path = "../zkapi-serverd" }
http-body-util = "0.1"
