[package]
name = "zkapi-indexerd"
description = "zkAPI indexer daemon: mirrors on-chain events into a local Merkle tree view and serves root/siblings"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
zkapi-types = { path = "../../protocol/rust/crates/zkapi-types" }
zkapi-core = { path = "../../protocol/rust/crates/zkapi-core" }
anyhow = { workspace = true }
axum = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
